--- a/css/styles.css
+++ b/css/styles.css
@@ -753,57 +753,24 @@ h6
     font-size:1.5rem;
     text-decoration: underline;
 }
-footer {
-    background-color: rgba(44, 62, 80, 1.0);
-    width: 100%;
-    bottom: 0;
-    color: #f3f3f3;
-    font-weight: bold;
-    font-size: 17px;
-}
-.footerHeader{
-    width:100%;
-    padding:1em;
-    background-color:rgba(52, 73, 94,1.0);
-    text-align:center;
-    color:white;
-}
-footer h3{
-    font-weight:bold;
-    padding: 20px;
-    text-align: center;
-}
-footer ul{
-    padding-left:150px;
-    list-style:none;
-}
-footer ul li{
-  padding: 9px;
-}
-footer p{
-    text-align : justify;
-    font-size : 14px;
-}
-footer iframe {
-    width:100%;
-    position:relative;
-    height:170px;
-}
-.sm{
-    list-style:none;
-    overflow:auto;
-}
-.sm li {
-    display: inline;
-    padding:5px;
-    float:left;
-}
-.sm li a img {
-    width:32px;
-}
 @media(min-width: 320px) and (max-width: 480px){
   #links{
     float: left;
     display: block;
   }
+}
+.centerit{
+  margin: 0 auto;
+}
+.bruh{
+  font-weight: bold;
+  color: #000;
+}
+@media(min-width: 320px) and (max-width: 480px){
+  .joy{
+    margin-top: -150px;
+  }
+}
+.format, .format, .format{
+  text-decoration: none;
 }
