--- a/css/styles.css
+++ b/css/styles.css
@@ -618,6 +618,34 @@ h1{
   #carousel figure{
     width: 100%;
   }
+  #carousel figure:nth-child(1){transform: rotateY(0deg) translateZ(288px);}
+  #carousel figure:nth-child(2) { transform: rotateY(40deg) translateZ(288px);}
+  #carousel figure:nth-child(3) { transform: rotateY(80deg) translateZ(288px);}
+  #carousel figure:nth-child(4) { transform: rotateY(120deg) translateZ(288px);}
+  #carousel figure:nth-child(5) { transform: rotateY(160deg) translateZ(288px);}
+  #carousel figure:nth-child(6) { transform: rotateY(200deg) translateZ(288px);}
+  #carousel figure:nth-child(7) { transform: rotateY(240deg) translateZ(288px);}
+  #carousel figure:nth-child(8) { transform: rotateY(280deg) translateZ(288px);}
+  #carousel figure:nth-child(9) { transform: rotateY(320deg) translateZ(288px);}
+
+  .helly{
+  	margin:4% auto;
+  	width: 200px;
+  	height: 140px;
+  	position: relative;
+  	perspective: 5000px;
+  }
+  #carousel figure{
+  	display: block;
+  	position: absolute;
+  	width: 50%;
+  	height: 50%px;
+  	left: 10px;
+  	top: 10px;
+  	background: black;
+  	overflow: hidden;
+  	border: solid 5px black;
+  }
 }
 #carousel{
 	width: 100%;
@@ -639,6 +667,10 @@ h1{
 	background: black;
 	overflow: hidden;
 	border: solid 5px black;
+}
+#carousel figure img{
+  height: 20vh;
+  width: 100%;
 }
 #carousel figure:nth-child(1){transform: rotateY(0deg) translateZ(288px);}
 #carousel figure:nth-child(2) { transform: rotateY(40deg) translateZ(288px);}
